--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \begin{document}
-(Type your content here.)
+Task one for FYS4150
 \end{document}
