--- a/Task1_FYS4150.tex
+++ b/Task1_FYS4150.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \begin{document}
-Task one for FYS4150
+Task one for FYS4150. After i have written this, how much work do i have to do before i get the right document online?
 \end{document}
