Update on Overleaf.

--- a/Task1_FYS4150.tex
+++ b/Task1_FYS4150.tex
@@ -2,5 +2,5 @@
 \usepackage[utf8]{inputenc}
 \begin{document}
 Task one for FYS4150. After i have written this, how much work do i have to do before i get the right document online? And now, eith just push/pull commands?
-
+IS it git pull --all that'll do it?
 \end{document}
