Update on Overleaf.

--- a/Task1_FYS4150.tex
+++ b/Task1_FYS4150.tex
@@ -1,6 +1,7 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
+\documentclass[10pt,a4paper,english,fleqn]{report}
+\usepackage{mystyle}
 \begin{document}
-Task one for FYS4150. After i have written this, how much work do i have to do before i get the right document online? And now, eith just push/pull commands?
-IS it git pull --all that'll do it?
+
+Ok en test
+
 \end{document}
