Update on Overleaf.

--- a/Task1_FYS4150.tex
+++ b/Task1_FYS4150.tex
@@ -56,6 +56,8 @@ for both single and double precision.
 Plot the results and see if you can determine empirically 
 the behavior of the total error as function of $h$.
 \end{enumerate}
+\newpage
+
 
 
 \end{document}
