Update on Overleaf.

--- a/mystyle.sty
+++ b/mystyle.sty
@@ -30,7 +30,7 @@
 \usepackage[margin=2.5cm]{geometry}
 \usepackage{setspace}
 \usepackage{amsfonts}
-
+%\usepackage{listings}
 \usepackage{lscape}
 \usepackage{float}
 \usepackage{wrapfig}
@@ -53,7 +53,8 @@
 % ??????????????????????????????
 % MATLAB
 
-\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
+\usepackage%[framed,numbered,autolinebreaks,useliterate]
+{mycode}
 
 
 % ??????????????????????????????
@@ -95,6 +96,8 @@
 \definecolor{chartreuse}{cmyk}{40.0,0.0,100.0,0.0}
 \definecolor{cottoncandy}{rgb}{1.0, 0.74, 0.85}
 \definecolor{uio}{cmyk}{0,100,100,0}
+\definecolor{mycolormain}{RGB}{255,69,0}
+\definecolor{mycolorcomp}{RGB}{32,128,128}
 
 
 
